# directory-organiser

./: Cargo.toml  readme.md
src/: main.rs
